[tool.poetry]
name = "landash"
version = "0.1.0"
description = ""
authors = ["Filip Sufitchi <fsufitchi@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.9"
podman-compose = "<1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
